Mon Mar 19 19:14:34 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/auto_run_tests.pl:

          When running an executable directly (no run_test.pl), we need to take
          into account the -ExeSubDir setting.

Mon Mar 19 14:48:21 UTC 2007  Ciju John  <johnc@ociweb.com>

        * tests/DCPS/Messenger_Imr/pub.ini:
          The repo.ior file path was mistakenly absolute. Fixed that.

Thu Mar 15 19:34:39 UTC 2007  Ciju John  <johnc@ociweb.com>

        * tests/DCPS/Messenger_Imr:
        * tests/DCPS/Messenger_Imr/DataReaderListener.h:
        * tests/DCPS/Messenger_Imr/DataReaderListener.cpp:
        * tests/DCPS/Messenger_Imr/Messenger.idl:
        * tests/DCPS/Messenger_Imr/Messenger_Imr.mpc:
        * tests/DCPS/Messenger_Imr/README:
        * tests/DCPS/Messenger_Imr/Writer.h:
        * tests/DCPS/Messenger_Imr/Writer.cpp:
        * tests/DCPS/Messenger_Imr/domain_ids:
        * tests/DCPS/Messenger_Imr/pub.ini:
        * tests/DCPS/Messenger_Imr/publisher.cpp:
        * tests/DCPS/Messenger_Imr/run_test.pl:
        * tests/DCPS/Messenger_Imr/sub.ini:
        * tests/DCPS/Messenger_Imr/subscriber.cpp:
          New test for InfoRepo - TAO ImR compatibility.

        * bin/dcps_tests.lst:
          Add new test to automated test list.

Thu Mar 15 14:29:19 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * DevGuideExamples/DDS/Messenger/run_ns_test.pl:

          The nsadd binary needs to be found in $ACE_ROOT/bin.  The fact that
          it's also in $TAO_ROOT/utils/nslist is just a side-effect of the GNU
          make build system.

        * tests/DCPS/Messenger_ZeroCopy/run_corbaloc_test.pl:
        * tests/DCPS/Messenger_ZeroCopy/run_ns_test.pl:

          Removed these files.  These alternate forms of run_test.pl are not
          used for this test.

Tue Mar 13 13:56:44 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/Messenger_ZeroCopy/Messenger.mpc:
        * tests/DCPS/Messenger_ZeroCopy/Messenger_ZeroCopy.mpc:
